force-app/main/default/objects/VisMed_Accion__c/VisMed_Accion__c.object-meta.xml
<CustomObject>
    <description>Objeto que contendrá las acciones que se cargan a cada objeto.</description>
    <label>Acción</label>
    <nameField>
        <label>Nombre de Acción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>