force-app/main/default/objects/VisMed_Accion__c/fields/VisMed_DescripcionAccion__c.field-meta.xml
<CustomField>
    <fullName>VisMed_DescripcionAccion__c</fullName>
    <description>Campo que contiene la descripción de la acción a realizar.</description>
    <label>Descripción de la acción</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>