force-app/main/default/objects/VisMed_Accion__c/fields/VisMed_FechaInicio__c.field-meta.xml
<CustomField>
    <fullName>VisMed_FechaInicio__c</fullName>
    <description>Campo que determina cuando debería empezar a trabajarse la acción.</description>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>