force-app/main/default/objects/VisMed_Accion__c/fields/VisMed_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Objetivo__c</fullName>
    <description>Objetivo al que se relaciona la acción.</description>
    <label>Objetivo</label>
    <referenceTo>VisMed_Objetivo__c</referenceTo>
    <relationshipLabel>Acciones</relationshipLabel>
    <relationshipName>Acciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>