force-app/main/default/objects/VisMed_Accion__c/validationRules/VisMed_FechaFin.validationRule-meta.xml
<ValidationRule>
    <fullName>VisMed_FechaFin</fullName>
    <active>true</active>
    <description>Validación que no permite ingresar una fecha de fin mayor a la fecha de fin del objetivo.</description>
    <errorConditionFormula>VisMed_FechaFin__c &gt;   VisMed_Objetivo__r.VisMed_FechaFin__c</errorConditionFormula>
    <errorDisplayField>VisMed_FechaFin__c</errorDisplayField>
    <errorMessage>No es posible ingresar una fecha de fin superior a la fecha de fin del objetivo.</errorMessage>
</ValidationRule>